--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body::-webkit-scrollbar {display: none;}
 header {
     position: sticky;
 
-    height: 100dvh;
+    height: 100svh;
 
     display: flex;
     flex-direction: column;
@@ -185,24 +185,19 @@ div#info {
     color: aliceblue;
 
     width: 100%;
-    height: 0;
+    height: 0%;
 
     margin-top: 30px;
 
     padding: 6px;
     box-sizing: border-box;
 
-    opacity: 0;
-
     display: flex;
     justify-content: start;
 
-    animation: opacity 1s ease 6.1s forwards normal running;
 }
 
-pre {content: '1'; animation: opacity 1s ease 6.1s forwards normal running;}
-
-#ascii-art {font-family: monospace; white-space: pre;}
+#ascii-art {font-family: monospace; font-size: 12px; white-space: pre;}
 
 div#info-text {
 
@@ -445,6 +440,37 @@ p#typing::after {
 
 @media screen and (max-width: 1440px) {
     span#ascii-art {
-        font-size: 10px;
+        font-size: 60%;
     }
+}
+
+@media screen and (max-width: 992px) {
+
+    div.overflow-y {
+        height: 90%;
+
+        padding-bottom: 10px;
+        box-sizing: border-box;
+        overflow-y: scroll;
+
+    }
+
+    div#info {
+        height: fit-content;
+        flex-direction: column;
+
+        box-sizing: content-box;
+    }
+    div#info-text {
+
+        margin-top: 20px;
+        margin-left: 0;
+
+        box-sizing: content-box;
+    }
+}
+
+.overflow-y {
+    scrollbar-width: none;
+    -ms-scroll-rails: none;
 }
